feat: add advanced link management
